header part complete

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Assignment-1</title>
+		<link rel="stylesheet" href="/styles/style.css" />
 	</head>
 	<body>
-		<header></header>
+		<header class="banner">
+			<div class="banner-container">
+				<img src="images/Group.png" alt="Boy" class="banner-img" />
+				<h2 class="banner-title title-text">
+					"In the near future, I hope to become a <br />Developer."
+				</h2>
+				<p class="banner-description description-text">
+					I aspire to become a Developer, leveraging my skills and passion for
+					technology to create innovative solutions, contribute to impactful
+					projects..
+				</p>
+				<button class="banner-btn">Contact with me</button>
+			</div>
+		</header>
 		<main></main>
 		<footer></footer>
 	</body>
