motivatio layer section complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header class="banner">
 			<div class="banner-container">
-				<img src="images/Group.png" alt="Boy" class="banner-img" />
+				<img src="./images/Group.png" alt="Boy" class="banner-img" />
 				<h2 class="banner-title title-text">
 					"In the near future, I hope to become a <br />Developer."
 				</h2>
@@ -21,7 +21,72 @@
 				<button class="banner-btn">Contact with me</button>
 			</div>
 		</header>
-		<main></main>
+		<main>
+			<div class="skill-container">
+				<h2 class="skill-title text-center title-text">
+					Why Web Development??
+				</h2>
+				<p class="skill-description text-center description-text">
+					I chose Web Development because it combines creativity and technical
+					skills to build interactive and impactful digital experiences.
+				</p>
+				<!-- layer-1 -->
+				<section class="motivation-layer1">
+					<div class="layer1-details">
+						<h2 class="layer1-title layer-title-text">
+							I will Do Coding and Change The World
+						</h2>
+						<p class="layer1-description description-text">
+							I am passionate about coding because it empowers me to solve
+							real-world problems, innovate, and create solutions..
+						</p>
+						<a
+							href="https://medium.com/@coderacademy/how-to-change-the-world-by-learning-to-code-e92c356cc692"
+							target="blank"
+							><button class="layer1-btn primary-btn">Learn More</button></a
+						>
+					</div>
+					<img src="./images/Layer_1.png" alt="Developer" class="layer1-img" />
+				</section>
+				<!-- layer2 -->
+				<section class="motivation-layer2">
+					<img src="./images/Group 3.png" alt="Developer" class="layer2-img" />
+					<div class="layer2-details">
+						<h2 class="layer2-title layer-title-text">
+							I will help People by creating Modern Web System
+						</h2>
+						<p class="layer2-description description-text">
+							I will help people by creating modern web systems that improve
+							accessibility, streamline processes, and deliver user-friendly..
+						</p>
+						<a
+							href="https://acropolium.com/blog/modern-web-app-architecture/"
+							target="blank"
+							><button class="layer2-btn primary-btn">Learn More</button></a
+						>
+					</div>
+				</section>
+				<!-- layer3 -->
+				<section class="motivation-layer3">
+					<div class="layer3-details">
+						<h2 class="layer3-title layer-title-text">
+							I will Do Coding and Change The World
+						</h2>
+						<p class="layer3-description description-text">
+							I will do coding and change the world by developing innovative
+							software solutions that address global challenges, improve lives,
+							and drive positive social impact..
+						</p>
+						<a
+							href="https://www.idtech.com/blog/how-coding-can-change-the-world"
+							target="blank"
+							><button class="layer3-btn primary-btn">Learn More</button></a
+						>
+					</div>
+					<img src="./images/Group 4.png" alt="Developer" class="layer3-img" />
+				</section>
+			</div>
+		</main>
 		<footer></footer>
 	</body>
 </html>
