inspire section complete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 		</header>
 		<main>
-			<div class="skill-container">
+			<section class="skill-container">
 				<h2 class="skill-title text-center title-text">
 					Why Web Development??
 				</h2>
@@ -85,7 +85,28 @@
 					</div>
 					<img src="./images/Group 4.png" alt="Developer" class="layer3-img" />
 				</section>
-			</div>
+			</section>
+			<section class="inspire-container text-center">
+				<h3 class="inspire-title title-text">My Inspiration</h3>
+				<p class="inspire-description description-text">
+					My inspiration comes from the boundless possibilities that technology
+					<br />
+					offers to solve real-world problems..
+				</p>
+				<div class="inspire-video">
+					<iframe
+						class="inspire-video-frame"
+						width="560"
+						height="315"
+						src="https://www.youtube.com/embed/S-gIFz-uYNw?si=YpYRBKZ3XD-rprpX"
+						title="YouTube video player"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						referrerpolicy="strict-origin-when-cross-origin"
+						allowfullscreen
+					></iframe>
+				</div>
+			</section>
 		</main>
 		<footer></footer>
 	</body>
