--- a/index.html
+++ b/index.html
@@ -107,6 +107,140 @@
 					></iframe>
 				</div>
 			</section>
+			<section class="target">
+				<div class="target1-header">
+					<h2 class="target1-header-title text-center title-text">
+						My Current Target
+					</h2>
+					<p class="target1-header-description text-center description-text">
+						My current target is to master modern web development frameworks and
+						technologies, building a strong foundation to create innovative web
+						solutions and tackle challenging projects.
+					</p>
+
+					<div class="target1-container">
+						<div class="target1 target1-color1">
+							<img
+								src="./images/html.png"
+								alt="Html logo"
+								class="target1-logo"
+							/>
+							<h4 class="target1-title">HTML</h4>
+							<p class="target1-description description-text">
+								HTML is the standard markup language for Web pages.
+							</p>
+							<a
+								href="https://www.w3schools.com/html/"
+								target="blank"
+								class="target1-link"
+								>Learn more</a
+							>
+						</div>
+						<div class="target1 target1-color2">
+							<img src="./images/css.png" alt="Css logo" class="target1-logo" />
+							<h4 class="target1-title">CSS</h4>
+							<p class="target1-description description-text">
+								CSS is the language we use to style an HTML document.
+							</p>
+							<a
+								href="https://www.w3schools.com/css/"
+								target="blank"
+								class="target1-link"
+								>Learn more</a
+							>
+						</div>
+						<div class="target1 target1-color3">
+							<img
+								src="./images/js.png"
+								alt="JavaScript logo"
+								class="target1-logo"
+							/>
+							<h4 class="target1-title">JavaScript</h4>
+							<p class="target1-description description-text">
+								JavaScript is the most popular programming lng.
+							</p>
+							<a
+								href="https://www.w3schools.com/js/"
+								target="blank"
+								class="target1-link"
+								>Learn more</a
+							>
+						</div>
+					</div>
+				</div>
+				<div class="target2-header">
+					<h2 class="target2-header-title text-center title-text">
+						My Next Target
+					</h2>
+					<p class="target2-header-description text-center description-text">
+						My next target is to apply my web development skills in real-world
+						projects, gaining practical experience contributing.
+					</p>
+					<div class="target2-container">
+						<div class="target2">
+							<img
+								src="./images/react.png"
+								alt="react logo"
+								class="target2-img"
+							/>
+							<div class="target2-details">
+								<h4 class="target2-title">ReactJS</h4>
+								<p class="target2-description">
+									React is a JavaScript library for building user
+									interfaces.React is used to build .
+								</p>
+								<a
+									href="https://www.w3schools.com/react/"
+									target="blank"
+									class="target1-link"
+									>Learn more</a
+								>
+							</div>
+						</div>
+						<div class="target2">
+							<img
+								src="./images/nodejs.png"
+								alt="nodejs logo"
+								class="target2-img"
+							/>
+							<div class="target2-details">
+								<h4 class="target2-title">NodeJS</h4>
+								<p class="target2-description description-text">
+									Node.js is an open source server environment.Node.js is free
+									Node.js runs on various platforms (Windows, Linux, Unix, Mac
+									OS X, etc.)
+								</p>
+								<a
+									href="https://www.w3schools.com/nodejs/nodejs_intro.asp"
+									target="blank"
+									class="target1-link"
+									>Learn more</a
+								>
+							</div>
+						</div>
+						<div class="target2">
+							<img
+								src="./images/mongodb.png"
+								alt="mongodb logo"
+								class="target2-img"
+							/>
+							<div class="target2-details">
+								<h4 class="target2-title">MongoDB</h4>
+								<p class="target2-description description-text">
+									MongoDB is a document database. It stores data in a type of
+									JSON format called BSON.
+								</p>
+								<a
+									href="https://www.w3schools.com/mongodb/"
+									target="blank"
+									class="target1-link"
+									>Learn more</a
+								>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer></footer>
 	</body>
