main part complete

--- a/index.html
+++ b/index.html
@@ -241,6 +241,22 @@
 					</div>
 				</div>
 			</section>
+			<section class="support">
+				<div class="support-container">
+					<h3 class="support-title title-text">I need Support</h3>
+					<p class="support-description description-text">
+						I need support to further develop my skills, gain valuable
+						experience, and navigate the challenges of becoming a successful web
+						developer.
+					</p>
+					<input
+						type="text"
+						placeholder="Suggest me any feedback for me"
+						class="support-area description-text"
+					/>
+					<input type="submit" class="support-submit-btn" />
+				</div>
+			</section>
 		</main>
 		<footer></footer>
 	</body>
