footer part complete

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					technology to create innovative solutions, contribute to impactful
 					projects..
 				</p>
-				<button class="banner-btn">Contact with me</button>
+				<a href="#foot1"><button class="banner-btn">Contact with me</button></a>
 			</div>
 		</header>
 		<main>
@@ -258,6 +258,36 @@
 				</div>
 			</section>
 		</main>
-		<footer></footer>
+		<footer class="footer-container" id="foot1">
+			<h4 class="footer-title">An Open Commitment by Ayub Islam</h4>
+			<ul class="footer-list">
+				<li class="list-item">
+					<a href="https://www.facebook.com/" target="blank"
+						><img
+							src="./images/facebook.png"
+							alt="facebook logo"
+							class="footer-logo"
+					/></a>
+				</li>
+				<li class="list-item">
+					<a href="https://github.com/" target="blank"
+						><img
+							src="./images/github.png"
+							alt="github logo"
+							class="footer-logo"
+					/></a>
+				</li>
+				<li class="list-item">
+					<a
+						href="https://www.linkedin.com/home?originalSubdomain=bd"
+						target="blank"
+						><img
+							src="./images/linkedin-icon 1.png"
+							alt="linkedin logo"
+							class="footer-logo"
+					/></a>
+				</li>
+			</ul>
+		</footer>
 	</body>
 </html>
